--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: python
 python:
   - "2.7.8"
+services:
+  - docker
+before_install:
+  - docker build -t ubuntu-python .
+script:
+  - docker run --rm ubuntu-python zip
+  - docker run --rm ubuntu-python aws --version
